[gd_scene load_steps=12 format=3 uid="uid://cltsq8d5dcqme"]

[ext_resource type="Script" path="res://Scripts/upgrade_screen.gd" id="1_26mdu"]
[ext_resource type="Shader" path="res://Shaders/programbot.gdshader" id="2_2hd7g"]
[ext_resource type="FontFile" uid="uid://ct4ox56t42ck3" path="res://External Resources/Fonts/Teko/Teko-VariableFont_wght.ttf" id="2_n5l7s"]
[ext_resource type="Theme" uid="uid://cvdn2gv12w2k1" path="res://Themes/ThemeButtons.tres" id="3_4cy3u"]
[ext_resource type="Script" path="res://Scripts/UpgradeBase.gd" id="5_n8nts"]
[ext_resource type="PackedScene" uid="uid://cpp01alcayl7g" path="res://Scenes/robotlist.tscn" id="6_dvjda"]
[ext_resource type="PackedScene" uid="uid://131f82am03rr" path="res://Scenes/upgrade_base_tree.tscn" id="6_yd21q"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5hv1b"]
shader = ExtResource("2_2hd7g")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_j8a24"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BackdropPanel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_p8upn"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.805]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BackdropPanel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jc0he"]
_data = {
"RESET": SubResource("Animation_j8a24"),
"blur": SubResource("Animation_p8upn")
}

[node name="UpgradeScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_26mdu")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_5hv1b")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -17.0
offset_right = 1.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2

[node name="ReturnButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.938
anchor_right = 0.995
anchor_bottom = 0.056
offset_left = -0.23999
offset_top = 2.0
offset_right = -0.100098
offset_bottom = 0.519997
theme = ExtResource("3_4cy3u")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_n5l7s")
theme_override_font_sizes/font_size = 35
text = "Return
"

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.005
anchor_top = 0.063
anchor_right = 0.996
anchor_bottom = 0.993
offset_left = -0.900001
offset_top = -0.0400009
offset_right = -0.0800781
offset_bottom = -0.440063
theme = ExtResource("3_4cy3u")
theme_override_font_sizes/font_size = 30
tab_alignment = 1

[node name="Base" type="Panel" parent="TabContainer"]
layout_mode = 2
script = ExtResource("5_n8nts")

[node name="UpgradeBaseTree" parent="TabContainer/Base" instance=ExtResource("6_yd21q")]
layout_mode = 1
offset_left = 405.0
offset_top = -50.0
offset_right = -443.0
offset_bottom = -106.0

[node name="Temp_button_armor" type="Button" parent="TabContainer/Base"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.025
anchor_top = 0.854
anchor_right = 0.127
anchor_bottom = 0.962
offset_left = -0.0749969
offset_top = 3.99213
offset_right = -0.300995
offset_bottom = 0.176025
text = "Upgrade  Base Armor"

[node name="armor_label" type="Label" parent="TabContainer/Base/Temp_button_armor"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.028
anchor_top = 0.791
anchor_right = 0.057
anchor_bottom = 0.84
offset_left = 0.4
offset_top = -142.309
offset_right = 45.6
offset_bottom = -103.16
text = "Armor:"

[node name="armor_value" type="Label" parent="TabContainer/Base/Temp_button_armor/armor_label"]
layout_mode = 0
offset_left = 66.0
offset_top = 1.0
offset_right = 200.0
offset_bottom = 45.0
text = "0"

[node name="Robots" type="Panel" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="botTempLabel" type="Label" parent="TabContainer/Robots"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.282
anchor_right = 0.282
offset_left = 750.0
offset_top = 431.0
offset_right = 1216.0
offset_bottom = 518.0
theme = ExtResource("3_4cy3u")
theme_override_font_sizes/font_size = 60
text = "This is the Bot Upgrade Panel"

[node name="RobotlistPanelContainer" type="PanelContainer" parent="TabContainer/Robots"]
layout_mode = 0
offset_left = 24.0
offset_top = 79.0
offset_right = 511.0
offset_bottom = 972.0

[node name="RobotlistControlNode" parent="TabContainer/Robots/RobotlistPanelContainer" instance=ExtResource("6_dvjda")]
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jc0he")
}

[connection signal="pressed" from="ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="TabContainer/Base/Temp_button_armor" to="TabContainer/Base" method="_on_temp_button_armor_pressed"]
